Java: Fix deprecated URL class (since Java 20)